test/corpus/comments.txt
===
Comments before query
===

-- comment
-- comment
SELECT * FROM table;

---

(source_file
  (select_statement
    (comment
        (comment_text))
    (comment
        (comment_text))
    (select_list
      (select_list_item
        expression: (wildcard)))
    (from_clause
      (object_reference
        (table_reference
          name: (reference))))))

===
Inline comment next to select expression
===

SELECT
  col1 -- col1 description
FROM table;

---

(source_file
  (select_statement
    (select_list
      (select_list_item
        expression: (column_reference
          column_ref: (reference))
        inline_comment: (comment
          (comment_text))))
  (from_clause
    (object_reference
      (table_reference
        name: (reference))))))

===
Comment above select item
===

SELECT
  -- col1 description
  col1

---

(source_file
  (select_statement
    (select_list
      (select_list_item
        comment: (comment
          (comment_text))
        expression: (column_reference
          column_ref: (reference))))))

===
Comment and inline comment select item with alias
===

SELECT
  -- col1 description
  col1 AS "col1" -- col1 description

---

(source_file
  (select_statement
    (select_list
      (select_list_item
        comment: (comment
          (comment_text))
        expression: (column_reference
          column_ref: (reference))
        alias: (reference)
        inline_comment: (comment
          (comment_text))))))

===
Mutli select item comments
===

SELECT
  -- col1 description
  col1,
  -- col2 description
  col2 -- col2 description

---

(source_file
  (select_statement
    (select_list
      (select_list_item_with_separator
        comment: (comment
          (comment_text))
        expression: (column_reference
          column_ref: (reference)))
      (select_list_item
        comment: (comment
          (comment_text))
        expression: (column_reference
          column_ref: (reference))
        inline_comment: (comment
          (comment_text))))))
