test/corpus/cte.txt
===
Basic select CTE
===

WITH a AS (
    SELECT
        b
    from
        c
)
SELECT
    b
FROM
    a.b.c

---
(source_file
  (select_statement
    (common_table_expressions
        (WITH)
        (common_table_expression
        (AS)
        (select_statement
            (SELECT)
            (select_list
            (select_list_item
                (column_reference)))
            (from_clause
            (FROM)
            (object_reference
                (table_reference
                    (table_name)))))))
    (SELECT)
    (select_list
      (select_list_item
        (column_reference)))
    (from_clause
        (FROM)
        (object_reference
            (table_reference
                (database_name)
                (schema_name)
                (table_name))))))
