test/corpus/limit_order_offset.txt
===
Select with limit
===

SELECT * FROM table LIMIT 10;

---

(source_file
  (select_statement
    (SELECT)
    (select_list
      (select_list_item
        expression: (WILDCARD)))
    (from_clause
      (FROM)
      (object_reference
        (table_reference
          name: (reference))))
    (limit_clause
      (LIMIT)
      (number_literal))))

===
Select with offset
===

SELECT * FROM table OFFSET 10;

---

(source_file
  (select_statement
    (SELECT)
    (select_list
      (select_list_item
        expression: (WILDCARD)))
    (from_clause
      (FROM)
      (object_reference
        (table_reference
          name: (reference))))
    (offset_clause
      (OFFSET)
      (number_literal))))

===
Select with limit and offset
===

SELECT * FROM table LIMIT 10 OFFSET 10;

---

(source_file
  (select_statement
    (SELECT)
    (select_list
      (select_list_item
        expression: (WILDCARD)))
    (from_clause
      (FROM)
      (object_reference
        (table_reference
          name: (reference))))
    (limit_clause
      (LIMIT)
      (number_literal))
    (offset_clause
      (OFFSET)
      (number_literal))))

===
Select with order by
===

SELECT * FROM table ORDER BY col desc, col2 asc;

---

(source_file
  (select_statement
    (SELECT)
    (select_list
      (select_list_item
        expression: (WILDCARD)))
    (from_clause
      (FROM)
      (object_reference
        (table_reference
          name: (reference))))
    (order_by_clause
      (ORDER_BY)
      (order_by_item
        expression: (column_reference
          column_ref: (reference))
        order: (order_by_descending
          (DESC)))
      (order_by_item
        expression: (column_reference
          column_ref: (reference))
        order: (order_by_ascending
          (ASC))))))
