test/corpus/select.txt
===
Select using wildcard
===

SELECT *;

---

(source_file
    (select_statement
        (SELECT)
        (select_list
            (select_list_item
                expression: (wildcard
                    (WILDCARD))))))

===
Simple SELECT query
===

SELECT co1, "co1", 'col1', 1, test();

---

(source_file
  (select_statement
    (SELECT)
    (select_list
      (select_list_item_with_separator
        expression: (column_reference
          column_ref: (reference)))
      (select_list_item_with_separator
        expression: (column_reference
          column_ref: (reference)))
      (select_list_item_with_separator
        expression: (string_literal))
      (select_list_item_with_separator
        expression: (number_literal))
      (select_list_item
        expression: (function_call)))))

===
SELECT case statement
===

SELECT case when 1 then 2 else 3 end;

---

(source_file
  (select_statement
    (SELECT)
    (select_list
      (select_list_item
        expression:
          (case_expression
            (CASE)
            (when_clause
                (WHEN)
                when_expression: (number_literal)
                (THEN)
                then_expression: (number_literal))
            (else_clause
                (ELSE)
                (number_literal))
            (END))))))

===
Simple SELECT query with alias
===

SELECT co1 AS "col1", col2 "col2";

---

(source_file
  (select_statement
    (SELECT)
    (select_list
      (select_list_item_with_separator
        expression: (column_reference
          column_ref: (reference))
          (AS)
        alias: (reference))
      (select_list_item
        expression: (column_reference
            column_ref: (reference))
          alias: (reference)))))
